# MyWaitlistr

./: .flake8  .gitignore  Procfile  app.py  gunicorn_conf.py  main.py  pyproject.toml  requirements.txt
src/apps/: app_router.py
src/apps/api_key/: models.py  router.py  service.py
src/apps/api_key/api/v1/: endpoints.py
src/apps/api_key/schemas/: api_key_schema.py
src/apps/auth/: models.py  router.py  service.py
src/apps/auth/api/v1/basic/: endpoints.py
src/apps/auth/api/v1/google/: endpoints.py
src/apps/auth/schemas/: google_schema.py  user_schema.py
src/apps/auth/utils/: auth.py  google_auth.py  password.py
src/apps/base/: exception_handler.py  router.py  s3_helpers.py
src/apps/base/api/: endpoints.py
src/apps/base/schemas/: reponse_types.py
src/apps/projects/: models.py  router.py  service.py
src/apps/projects/api/v1/: endpoints.py
src/apps/projects/schemas/: request_schema.py  response_schema.py
src/apps/waitlist/: router.py
src/apps/waitlist/api/v1/: endpoints.py
src/apps/waitlist/api/v2/: endpoints.py
src/apps/waitlist/schemas/: waitlist_schema.py
src/config/: settings.py
src/config/db/mongo_management/: mongo_manager.py
src/config/db/postgres_management/: pg_manager.py
src/config/db/redis_management/: redis_manager.py
src/config/logs/sentry_management/: sentry_manager.py
src/static/: styles.css
src/templates/: 404.html  home.html
