[tool.poetry]
name = "eventkhojowaitlist"
version = "0.1.0"
description = ""
authors = ["Nayan Das <ndas5144@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pymongo = "^4.7.1"
python-decouple = "^3.8"
certifi = "^2024.2.2"
flake8 = "^7.0.0"
uvicorn = "^0.29.0"
slowapi = "^0.1.9"
pydantic = "^2.7.1"
sentry-sdk = {version = "^2.1.1", extras = ["fastapi"]}
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
databases = "^0.9.0"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
boto3 = "^1.34.144"
pytz = "^2024.1"
requests = "^2.32.3"
redis = "^5.0.8"
hiredis = "^3.0.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
